[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/bgspace.png" type="Texture" id=1]
[ext_resource path="res://personagens/jogador/jogador.tscn" type="PackedScene" id=2]
[ext_resource path="res://personagens/inimigo/spawnInimigo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/mundo.gd" type="Script" id=4]
[ext_resource path="res://images/tela_feedback.png" type="Texture" id=5]
[ext_resource path="res://images/buto_play_branco (1).png" type="Texture" id=6]
[ext_resource path="res://images/buto_play_rosa (1).png" type="Texture" id=7]

[node name="mundo" type="Node2D"]
script = ExtResource( 4 )
SceneToGo = "res://Terceiro_Plano.tscn"

[node name="Bgspace" type="Sprite" parent="."]
position = Vector2( 635.5, 323.5 )
scale = Vector2( 4.99609, 2.55078 )
texture = ExtResource( 1 )

[node name="jogador" parent="." instance=ExtResource( 2 )]
position = Vector2( 608, 583 )

[node name="spawnInimigo" parent="." instance=ExtResource( 3 )]

[node name="LabelVida" type="Label" parent="."]
margin_left = 3.0
margin_top = 26.0
margin_right = 53.0
margin_bottom = 68.0
rect_scale = Vector2( 2.5, 2.5 )

[node name="LabelPontuacao" type="Label" parent="."]
margin_left = 4.0
margin_top = 90.0
margin_right = 44.0
margin_bottom = 104.0
rect_scale = Vector2( 2.5, 2.5 )

[node name="Tutorial" type="TextureRect" parent="."]
pause_mode = 2
process_priority = 2
margin_left = 277.0
margin_top = 122.0
margin_right = 997.0
margin_bottom = 535.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Button_Play" type="TextureButton" parent="Tutorial"]
margin_left = 312.0
margin_top = 293.0
margin_right = 391.0
margin_bottom = 366.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Tutorial"]
margin_left = 64.0
margin_top = 64.0
margin_right = 430.0
margin_bottom = 197.0
rect_scale = Vector2( 1.6, 1.6 )
text = "SPACESHIPS

Tutorial: 
-Utilize as setinhas Esquerda e Direita do teclado para movimentar a nave e \"Espaço a para atirar\".
-Seu objetivo é destruir 12 naves.
-Não encoste nas naves.
-Não deixe mais de 4 naves. passarem por você."
autowrap = true

[connection signal="spawn_laser" from="jogador" to="." method="_on_jogador_spawn_laser"]
[connection signal="pressed" from="Tutorial/Button_Play" to="." method="_on_Button_Play_pressed"]
